# mirai-cpp-template

./: .gitmodules  CMakeLists.txt  README.md
include/: easywsclient.cpp  easywsclient.hpp  myheader.h
src/: main.cpp
